<resources>
    <string name="app_name">엘프리모컨</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="default_notification_channel_id">Channel ID</string>
    <string name="default_notification_channel_name" translatable="true">Test</string>
    <string name="todo">TODO</string>
    <string name="player_view">연주자 표시</string>
    <string name="player">연주자</string>
    <string name="titleSize">제목사이즈</string>
    <string name="playerSize">연주자사이즈</string>
    <string name="textFont">글자폰트</string>
    <string name="nanum">나눔</string>
    <string name="eul10">을지로\n(10년)</string>
    <string name="eul">을지로</string>
    <string name="grand">할아범</string>
    <string name="mugung">무궁화</string>
    <string name="happy">즐거움</string>
    <string name="up">위로</string>
    <string name="somi">소미</string>
    <string name="fontColor">글자색상</string>
    <string name="black">검정</string>
    <string name="white">하양</string>
    <string name="red">빨강</string>
    <string name="orange">주황</string>
    <string name="yellow">노랑</string>
    <string name="green">초록</string>
    <string name="blue">파랑</string>
    <string name="navy">남색</string>
    <string name="purple">보라</string>
    <string name="pink">핑크</string>
    <string name="skyBlue">하늘</string>
    <string name="version">버전 정보</string>
    <string name="time">00:00/15:00</string>
    <string name="elfRmt">엘프리모컨 이용 안내</string>
    <string name="elfPer">엘프리모컨을 이용하려면\n아래의 권한을 허용해 주세요.</string>
    <string name="save">저장</string>
    <string name="saveText">내 기기에서 영상, 음성파일을 저장하고 합성하기 위해 저장 접근 허용이 필요합니다.</string>
    <string name="camera">카메라</string>
    <string name="cameraText">내 기기에서 영상을 녹화하기 위해 카메라 접근 허용이 필요합니다.</string>
    <string name="record">녹음</string>
    <string name="recordText">내 기기에서 영상 녹화시 음성을 녹음하기 위해 녹음 접근 허용이 필요합니다.</string>
    <string name="Location">위치</string>
    <string name="LocationText">내 기기에서 블루투스 연결과 유지를 위해 위치 접근 허용이 필요합니다.</string>
    <string name="PerOk">허용하기</string>
    <string name="look">다시 보지 않음</string>
    <string name="edit">입력</string>
    <string name="noVideo">영상 없음</string>
    <string name="sinkAudio">오디오 0.025초 (0.0)</string>
    <string name="elfdata_mp4">ElfData폴더에 MP4파일로 저장됩니다.</string>
    <string name="chgFileName">파일 이름 변경</string>
    <string name="cancle">취소</string>
    <string name="video">동영상</string>
    <string name="delete">삭제</string>
    <string name="sure">종료하시겠습니까?</string>
    <string name="chooseSave">저장 방법을 선택해주세요.</string>
    <string name="overwrite">현재 파일에 덮어쓰기</string>
    <string name="another">다른 이름으로 저장</string>
    <string name="confirm">확인</string>
    <string name="videoSel">+동영상 선택</string>
    <string name="gallary">갤러리</string>
    <string name="builtIn">기본 제공 동영상</string>
    <string name="singerSel">가수명 선택</string>
    <string name="exit">종료</string>
    <string name="no">아니오</string>
    <string name="yes">예</string>
    <string name="timer">타이머</string>
    <string name="release">해제</string>
    <string name="sec2">2초</string>
    <string name="sec5">5초</string>
    <string name="sec10">10초</string>
    <string name="complete">완료</string>
    <string name="synthesis">영상 합성 설정</string>
    <string name="speaker">스피커 음향 분석</string>
    <string name="time_set">반주기 시간 설정</string>
    <string name="tjsize">타이틀</string>
    <string name="fa_file">파일 선택</string>
    <string name="sens">마이크 감도</string>
    <string name="saveV">애창곡 기기로 전송</string>
    <string name="loadV">애창곡 기기에서 받아오기</string>
    <string name="kok">곡 목록 관리</string>
</resources>