<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="com.elf.remote.viewmodel.main.PermissionViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="20">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/elfRmt"
            android:textColor="#000000"
            android:textSize="@dimen/_16sdp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/elfPer"
            android:textColor="#000000"
            android:textSize="@dimen/_12sdp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:text="@string/save"
            android:textColor="#000000"
            android:textSize="@dimen/_16sdp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:text="@string/saveText"
            android:textColor="#000000"
            android:textSize="@dimen/_11sdp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:text="@string/camera"
            android:textColor="#000000"
            android:textSize="@dimen/_16sdp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:text="@string/cameraText"
            android:textColor="#000000"
            android:textSize="@dimen/_11sdp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:text="@string/record"
            android:textColor="#000000"
            android:textSize="@dimen/_16sdp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:text="@string/recordText"
            android:textColor="#000000"
            android:textSize="@dimen/_11sdp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:text="@string/Location"
            android:textColor="#000000"
            android:textSize="@dimen/_16sdp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:text="@string/LocationText"
            android:textColor="#000000"
            android:textSize="@dimen/_11sdp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:onClick="@{()-> viewModel.onSaveClick()}"
            android:text="@string/PerOk"
            android:textSize="@dimen/_12sdp" />
    </LinearLayout>

</layout>