<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.elf.remote.viewmodel.my_recorded.TimerViewModel" />
    </data>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_250sdp"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/timer"
                android:textColor="@color/black"
                android:textSize="@dimen/_19sdp" />

            <RadioGroup
                android:id="@+id/Rg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/nop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_12sdp"
                    android:text="@string/release"
                    android:textSize="@dimen/_14sdp" />

                <RadioButton
                    android:id="@+id/two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_12sdp"
                    android:text="@string/sec2"
                    android:textSize="@dimen/_14sdp" />

                <RadioButton
                    android:id="@+id/five"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_12sdp"
                    android:text="@string/sec5"
                    android:textSize="@dimen/_14sdp" />

                <RadioButton
                    android:id="@+id/ten"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_12sdp"
                    android:text="@string/sec10"
                    android:textSize="@dimen/_14sdp" />
            </RadioGroup>

            <Button
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:onClick="@{()-> viewModel.onSubmitClick()}"
                android:text="@string/complete"
                android:textColor="#028577" />

        </LinearLayout>

    </FrameLayout>

</layout>