<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.elf.remote.viewmodel.my_video.MyMovKindViewModel" />
    </data>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_165sdp"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/videoSel"
                android:textColor="#000000"
                android:textSize="@dimen/_18sdp" />

            <RadioGroup
                android:id="@+id/SaveKind"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/ts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_12sdp"
                    android:text="@string/gallary"
                    android:textSize="@dimen/_14sdp" />

                <RadioButton
                    android:id="@+id/at"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_12sdp"
                    android:text="@string/builtIn"
                    android:textSize="@dimen/_14sdp" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal">

                <Button
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:onClick="@{()-> viewModel.onCancledClick()}"
                    android:text="@string/cancle"
                    android:textColor="#028577" />

                <Button
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:onClick="@{()-> viewModel.onSaveClick()}"
                    android:text="@string/confirm"
                    android:textColor="#028577" />

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</layout>