<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.elf.remote.viewmodel.DelOkViewModel" />
    </data>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_150sdp"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/deloktxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/video"
                android:textColor="#000000"
                android:textSize="22sp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal">

                <Button
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:onClick="@{()-> viewModel.onSubmitClick()}"
                    android:text="@string/cancle"
                    android:textColor="#028577" />

                <Button
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:onClick="@{()-> viewModel.onDelClick()}"
                    android:text="@string/delete"
                    android:textColor="#028577" />

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</layout>